# ocaml-bonsai-chat-example

./: README.md  dune-project  shell.nix
client/: app.ml  dune  main.ml  style.input.css  tailwind.config.js
common/: dune
nix/: sources.json
server/src/: bonsai_chat_open_source_native.ml  dune
