(rule (alias default) (target style.css)
  (deps ./style.input.css ./tailwind.config.js ./app.ml)
  (action (run %{bin:tailwindcss} -c ./tailwind.config.js -i ./style.input.css -o style.css)))

(executables (names main)
 (libraries async_kernel async_js core_kernel.composition_infix core
  bonsai.web bonsai_chat_open_source_common virtual_dom.input_widgets)
 (preprocess (pps js_of_ocaml-ppx bonsai.ppx_bonsai ppx_jane ppx_css))
 (modes js))
