(library (name bonsai_chat_open_source_native)
 (libraries async_extra.async_bus bonsai_chat_open_source_common
  async_rpc_websocket cohttp-async decompress.zl cohttp_static_handler)
 (preprocess (pps ppx_jane ppx_css)))

(rule (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} ../../client/main.bc.js ../../client/style.css)
 (action (bash "%{bin:ocaml-embed-file} %{deps} -output embedded_files")))
